# asr-rust-ru

./: .dockerignore  .gitignore  API.md  Cargo.toml  Dockerfile  Dockerfile.bundle  README.md  compose.yaml  run.sh
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: inference.rs
examples/: corrector_demo.rs
scripts/: convert_finetuned.py  convert_model.py  prepare_corrector.py  pyproject.toml  ws_client_example.py
src/: audio.rs  config.rs  corrector.rs  decoding.rs  lib.rs  main.rs  schemas.rs
src/model/: decoder.rs  encoder.rs  mod.rs
